# JPP-projects

./: README.md
lager-lang/: .gitignore  lager-lang.cabal
lager-lang/docs/: description.tex  lager-lang.cf
lager-lang/examples/: test.lg
lager-lang/examples/bad/: break_outside.lg  compare-bools.lg  compare-functions.lg  compare-strings.lg  continue_outside.lg  def_after_call.lg  no_main.lg  ref_arg_expr.lg  void_arg.lg  void_variable.lg  wrong-main.lg  wrong-number-of-args.lg  wrong-type.lg  wrong_main.lg  wrong_return.lg
lager-lang/examples/good/: 03-01-assignment.lg  05-01-if.lg  06-02-factorial.lg  06-04-fast-pow.lg  07-01-arg-val.lg  07-02-arg-ref.lg  10-02-modulo-by-zero.lg  12-01-static-types.lg  13-01-nested_function.lg  16-01-break.lg  arg_ref.lg  arg_val.lg  arithmetic.lg  break.lg  comparison.lg  factorial.lg  fibonacci.lg  fun_overwrite.lg  function_in_function.lg  global_variables.lg  hello_world.lg  return_early.lg  static_binding.lg  var_overwrite.lg
lager-lang/src/: Common.hs  Evaluator.hs  Interpreter.hs  TypeChecker.hs
lager-lang/src/bnfc/: DocLagerLang.txt  LexLagerLang.hs  ParLagerLang.info  TestLagerLang.hs
project-1/: Graph.hs  Set.hs
project-2/: README.md  lager-lang.cabal  lager-lang.cf  makefile  table.txt
project-2/docs/: description.tex  lager-lang.cf  table.txt
project-2/examples/: argref.lg  argval.lg  type.lg
project-2/src/: AbsLagerLang.hs  DocLagerLang.txt  Interpreter.hs  LexLagerLang.x  Main.hs  ParLagerLang.hs  ParLagerLang.info  ParLagerLang.y  PrintLagerLang.hs  TypeChecker.hs
project-3/: dw440014.pl  verify.pl
(+19 files in other folders)
