cabal-version:      3.4
name:               lager-lang
version:            0.1.0.0

author:             Dominik Wawszczak
maintainer:         Dominik Wawszczak

executable lager-lang
    main-is: Main.hs

    other-modules:
        AbsLagerLang,
        ParLagerLang,
        LexLagerLang,
        TypeChecker,
        Interpreter

    build-depends:
        base ^>=4.15.1.0,
        array ^>=0.5.4.0,
        mtl ^>=2.2.2,
        containers ^>=0.7
    hs-source-dirs:   src, src/bnfc
    default-language: Haskell2010
    
    builddir: build